@@ -7,7 +7,7 @@
 #version number
 VERSION = 0
 PATCHLEVEL = 8
-SUBLEVEL =   10-pre5
+SUBLEVEL =   10
 EXTRAVERSION = 
 
 RELEASE=$(VERSION).$(PATCHLEVEL).$(SUBLEVEL)$(EXTRAVERSION)
