@@ -34,8 +34,9 @@ build-stamp: configure-stamp
 	dh_testdir
 
 	# Add here commands to compile the package.
-	$(MAKE) all  exclude_modules=mysql cfg-target=/etc/ser/
+	$(MAKE) all  exclude_modules="mysql jabber" cfg-target=/etc/ser/
 	$(MAKE) modules modules=modules/mysql cfg-target=/etc/ser/
+	$(MAKE) modules modules=modules/jabber cfg-target=/etc/ser/
 	#/usr/bin/docbook-to-man debian/ser.sgml > ser.1
 
 	touch build-stamp
@@ -57,7 +58,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/ser
-	$(MAKE) install  exclude_modules=mysql \
+	$(MAKE) install  exclude_modules="mysql jabber" \
 		basedir=$(CURDIR)/debian/ser \
 		prefix=/usr \
 		cfg-prefix=$(CURDIR)/debian/ser \
@@ -67,6 +68,12 @@ install: build
 		basedir=$(CURDIR)/debian/ser-mysql-module \
 		prefix=/usr \
 		cfg-prefix=$(CURDIR)/debian/ser-mysql-module \
+		cfg-target=/etc/ser/
+	#install only the jabber module
+	$(MAKE) install-modules modules=modules/jabber  \
+		basedir=$(CURDIR)/debian/ser-jabber-module \
+		prefix=/usr \
+		cfg-prefix=$(CURDIR)/debian/ser-jabber-module \
 		cfg-target=/etc/ser/
 	#dh_movefiles
 
