@@ -5,6 +5,9 @@ d none etc/ser 0755 bin bin
 e none etc/ser/ser.cfg 0644 bin bin
 d none sbin 0755 bin bin
 f none sbin/ser 0755 bin bin
+f none sbin/serctl 0755 bin bin
+f none sbin/ser_mysql.sh 0755 bin bin
+f none sbin/gen_ha1 0755 bin bin
 d none lib 0755 bin bin
 d none lib/ser 2755 bin bin
 d none lib/ser/modules 2755 bin bin
@@ -15,6 +18,7 @@ f none lib/ser/modules/im.so 0755 bin bin
 f none lib/ser/modules/jabber.so 0755 bin bin
 f none lib/ser/modules/maxfwd.so 0755 bin bin
 f none lib/ser/modules/msilo.so 0755 bin bin
+f none lib/ser/modules/mysql.so 0755 bin bin
 f none lib/ser/modules/pike.so 0755 bin bin
 f none lib/ser/modules/print.so 0755 bin bin
 f none lib/ser/modules/registrar.so 0755 bin bin
@@ -24,12 +28,30 @@ f none lib/ser/modules/sms.so 0755 bin bin
 f none lib/ser/modules/textops.so 0755 bin bin
 f none lib/ser/modules/tm.so 0755 bin bin
 f none lib/ser/modules/usrloc.so 0755 bin bin
-d none share 0755 bin bin
-d none share/doc 0755 bin bin
-d none share/doc/ser 0755 bin bin
-f none share/doc/ser/README 0644 bin bin
-d none share/man 0755 bin bin
-d none share/man/man8 0755 bin bin
-f none share/man/man8/ser.8 0644 bin bin
-d none share/man/man5 0755 bin bin
-f none share/man/man5/ser.cfg.5 0644 bin bin
+d none doc 0755 bin bin
+d none doc/ser 0755 bin bin
+f none doc/ser/README 0644 bin bin
+f none doc/ser/README.cfg 0644 bin bin
+f none doc/ser/INSTALL 0644 bin bin
+f none doc/ser/README-MODULES 0644 bin bin
+f none doc/ser/AUTHORS 0644 bin bin
+f none doc/ser/README.acc 0644 bin bin
+f none doc/ser/README.auth 0644 bin bin
+f none doc/ser/README.exec 0644 bin bin
+f none doc/ser/README.im 0644 bin bin
+f none doc/ser/README.jabber 0644 bin bin
+f none doc/ser/README.maxfwd 0644 bin bin
+f none doc/ser/README.pike 0644 bin bin
+f none doc/ser/README.print 0644 bin bin
+f none doc/ser/README.registrar 0644 bin bin
+f none doc/ser/README.rr 0644 bin bin
+f none doc/ser/README.sl 0644 bin bin
+f none doc/ser/README.sms 0644 bin bin
+f none doc/ser/README.textops 0644 bin bin
+f none doc/ser/README.tm 0644 bin bin
+f none doc/ser/README.usrloc 0644 bin bin
+d none man 0755 bin bin
+d none man/man8 0755 bin bin
+f none man/man8/ser.8 0644 bin bin
+d none man/man5 0755 bin bin
+f none man/man5/ser.cfg.5 0644 bin bin
